--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ i {
     font-size: 4rem;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 800px) {
     .grid-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr) / repeat(12, 1fr);
@@ -115,4 +115,9 @@ i {
     #portfolio {
         grid-area: down;
     }
+}
+
+#submit-address:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 }
