--- a/index.css
+++ b/index.css
@@ -175,3 +175,9 @@ i {
     /* margin-bottom: auto; */
 /* }  */
 
+li {
+    /* list-style-type: none; */
+    width: 100%;
+    overflow-x: scroll;
+    padding: 0.3em 0.1em;
+}
