--- a/index.css
+++ b/index.css
@@ -185,3 +185,11 @@ li {
     width: 30%;
     border-radius: 10%;
 }
+
+.token-summary {
+    margin: 0.2em;
+}
+
+#total-summary {
+    font-weight: bold;
+}
