--- a/index.css
+++ b/index.css
@@ -129,12 +129,17 @@ i {
 
     li {
         display: flex;
+        justify-content: space-between;
         gap: 1em;
         align-items: center;
     }
 
     .delete-address {
-        width: 20%;
+        width: 10%;
+    }
+
+    .address, .delete-address {
+        margin: 0;
     }
 }
 
@@ -145,7 +150,7 @@ i {
 
 #modal {
     width: 70%;
-    height: 1000px;
+    height: 60%;
     background-color: rgba(111, 111, 111, 0.95);
     justify-content: center;
     position:fixed;
